Switch to absolute positionning instead of fixed

--- a/src/gummy.css
+++ b/src/gummy.css
@@ -1,8 +1,16 @@
 .gummy-wrap {
+  position: relative;
+  overflow: hidden;
+}
+
+.gummy-inner-wrap {
   overflow: scroll;
+  position: relative;
 }
 
 .gummy-head {
-  position: fixed;
+  position: absolute;
+  top: 0;
+  left: 0;
   z-index: 1000;
 }
